2025-12-12T00:47:59Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/20152360446 # 836
* notice: Stats Output Repository: https://github.com/andry81-stats/github-action-extensions--gh-stats/commits?branch=master&time_zone=utc&until=2025-12-12
* notice: last 14d: unq all: 3 3
* notice: prev accum: outdated-unq outdated-all / unq all: 252 286 / 256 290
* notice: next accum: outdated-unq outdated-all / unq all: 253 287 / 256 290
* notice: prev exec diff / last date diff / accum: unq all: +0 +0 -0 -0 / +0 +0 -0 -0 / 0 0
* notice: removed / changed dates: [2025-11-27] / []

2025-12-10T00:48:01Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/20083409950 # 834
* notice: Stats Output Repository: https://github.com/andry81-stats/github-action-extensions--gh-stats/commits?branch=master&time_zone=utc&until=2025-12-10
* notice: last 14d: unq all: 4 4
* notice: prev accum: outdated-unq outdated-all / unq all: 252 286 / 255 289
* notice: next accum: outdated-unq outdated-all / unq all: 252 286 / 256 290
* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -0 -0 / +1 +1 -0 -0 / 1 1
* notice: removed / changed dates: [] / [2025-12-09]

2025-12-09T00:46:37Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/20047902106 # 833
* notice: Stats Output Repository: https://github.com/andry81-stats/github-action-extensions--gh-stats/commits?branch=master&time_zone=utc&until=2025-12-09
* notice: last 14d: unq all: 3 3
* notice: prev accum: outdated-unq outdated-all / unq all: 252 286 / 254 288
* notice: next accum: outdated-unq outdated-all / unq all: 252 286 / 255 289
* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -0 -0 / +1 +1 -0 -0 / 1 1
* notice: removed / changed dates: [] / [2025-12-08]

2025-12-07T00:52:40Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/19996667462 # 831