@@ -1,19 +1,10 @@
 {
-  "timestamp" : "2025-12-12T00:47:59Z",
-  "count_outdated" : 287,
-  "uniques_outdated" : 253,
-  "count" : 290,
-  "uniques" : 256,
+  "timestamp" : "2025-12-21T00:52:39Z",
+  "count_outdated" : 288,
+  "uniques_outdated" : 254,
+  "count" : 292,
+  "uniques" : 258,
   "clones" : [
-    {
-      "timestamp": "2025-12-06T00:00:00Z",
-      "count": 1,
-      "count_minmax": [ 1, 1 ],
-      "count_decinc": [ 0, 1 ],
-      "uniques": 1,
-      "uniques_minmax": [ 1, 1 ],
-      "uniques_decinc": [ 0, 1 ]
-    },
     {
       "timestamp": "2025-12-08T00:00:00Z",
       "count": 1,
@@ -31,6 +22,15 @@
       "uniques": 1,
       "uniques_minmax": [ 1, 1 ],
       "uniques_decinc": [ 0, 1 ]
+    },
+    {
+      "timestamp": "2025-12-20T00:00:00Z",
+      "count": 2,
+      "count_minmax": [ 2, 2 ],
+      "count_decinc": [ 0, 2 ],
+      "uniques": 2,
+      "uniques_minmax": [ 2, 2 ],
+      "uniques_decinc": [ 0, 2 ]
     }
   ]
 }
