@@ -1,12 +1,7 @@
 {
-  "count": 3,
-  "uniques": 3,
+  "count": 4,
+  "uniques": 4,
   "clones": [
-    {
-      "timestamp": "2025-12-06T00:00:00Z",
-      "count": 1,
-      "uniques": 1
-    },
     {
       "timestamp": "2025-12-08T00:00:00Z",
       "count": 1,
@@ -16,6 +11,11 @@
       "timestamp": "2025-12-09T00:00:00Z",
       "count": 1,
       "uniques": 1
+    },
+    {
+      "timestamp": "2025-12-20T00:00:00Z",
+      "count": 2,
+      "uniques": 2
     }
   ]
 }
